--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv": "^6.2.0",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
-    "node-localstorage": "^2.2.1"
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.0.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
