--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "csv": "^6.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "express-fileupload": "^1.4.0",
     "formidable": "^2.0.1",
     "mysql": "^2.18.1"
   },
