--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.1",
     "formidable": "^2.0.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "smtp-server": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
