--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "formidable": "^2.0.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "smtp-server": "^3.11.0"
   },
